添加setting-ssr和clear-ssr两个命令

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ __pycache__/
 # C extensions
 *.so
 
+.idea
+poetry.lock
+poetry.toml
+pyproject.toml
+
 # Distribution / packaging
 .Python
 build/
